log_output/manifests/hashreader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashreader-svc
spec:
  type: ClusterIP
  selector:
    app: hashreader
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
